# testing_task_2

./: pyproject.toml
src/: taxes.py
tests/: test_taxes.py
